tests/integration/pass/modules_basic.kr
# Test basic module import
import utils from "tests/integration/pass/test_utils_module.kr"
print "Module imported successfully"

